version_h = vcs_tag(command : ['git', 'rev-parse', '--short', 'HEAD'],
                    fallback : 'unknown version',
                    input : 'version.h.in',
                    output : 'version.h')

# sources for xsystem4
xsystem4 = [version_h,
            'audio.c',
            'audio_meta.c',
            'audio_mixer.c',
            'asset_manager.c',
            'cJSON.c',
            'draw.c',
            'effect.c',
            'ffi.c',
            'font_freetype.c',
            'font_fnl.c',
            'format.c',
            'hacks.c',
            'heap.c',
            'id_pool.c',
            'input.c',
            'page.c',
            'resume.c',
            'savedata.c',
            'scene.c',
            'sprite.c',
            'system4.c',
            'text.c',
            'util.c',
            'video.c',
            'vm.c',

            '3d/debug.c',
            '3d/model.c',
            '3d/parser.c',
            '3d/reign.c',
            '3d/renderer.c',

            'dungeon/dgn.c',
            'dungeon/dtx.c',
            'dungeon/dungeon.c',
            'dungeon/map.c',
            'dungeon/polyobj.c',
            'dungeon/renderer.c',
            'dungeon/skybox.c',
            'dungeon/tes.c',

            'parts/construction.c',
            'parts/debug.c',
            'parts/input.c',
            'parts/motion.c',
            'parts/parts.c',
            'parts/render.c',
            'parts/text.c',

            'hll/ACXLoader.c',
            'hll/ADVSYS.c',
            'hll/AliceLogo.c',
            'hll/AliceLogo2.c',
            'hll/AliceLogo3.c',
            'hll/AliceLogo4.c',
            'hll/AliceLogo5.c',
            'hll/AnteaterADVEngine.c',
            'hll/BanMisc.c',
            'hll/Bitarray.c',
            'hll/CGManager.c',
            'hll/CharSpriteManager.c',
            'hll/ChipmunkSpriteEngine.c',
            'hll/ChrLoader.c',
            'hll/CommonSystemData.c',
            'hll/Confirm.c',
            'hll/Confirm2.c',
            'hll/Confirm3.c',
            'hll/CrayfishLogViewer.c',
            'hll/Cursor.c',
            'hll/DataFile.c',
            'hll/DrawDungeon.c',
            'hll/DrawGraph.c',
            'hll/DrawMovie2.c',
            'hll/DrawPluginManager.c',
            'hll/DrawSimpleText.c',
            'hll/File.c',
            'hll/File2.c',
            'hll/FileOperation.c',
            'hll/FillAngle.c',
            'hll/GoatGUIEngine.c',
            'hll/Gpx2Plus.c',
            'hll/GUIEngine.c',
            'hll/iarray.c',
            'hll/IbisInputEngine.c',
            'hll/InputDevice.c',
            'hll/InputString.c',
            'hll/KiwiSoundEngine.c',
            'hll/LoadCG.c',
            'hll/MainEXFile.c',
            'hll/MainSurface.c',
            'hll/MarmotModelEngine.c',
            'hll/Math.c',
            'hll/MapLoader.c',
            'hll/MenuMsg.c',
            'hll/MonsterInfo.c',
            'hll/MsgLogManager.c',
            'hll/MsgLogViewer.c',
            'hll/MsgSkip.c',
            'hll/OutputLog.c',
            'hll/PassRegister.c',
            'hll/PlayDemo.c',
            'hll/PlayMovie.c',
            'hll/ReignEngine.c',
            'hll/SACT2.c',
            'hll/SengokuRanceFont.c',
            'hll/SoundFilePlayer.c',
            'hll/StoatSpriteEngine.c',
            'hll/StretchHelper.c',
            'hll/SystemService.c',
            'hll/SystemServiceEx.c',
            'hll/Timer.c',
            'hll/Toushin3Loader.c',
            'hll/VSFile.c',
]

xsystem4_deps = [libm, zlib, sdl2, ft2, ffi, cglm, sndfile, libsys4_dep] + gl_deps

if get_option('debugger').allowed()
    add_project_arguments('-DDEBUGGER_ENABLED', language : 'c')
    xsystem4 += 'debug.c'
    xsystem4 += 'debugger_cmd.c'
    if chibi.found()
        xsystem4_deps += chibi
        xsystem4 += 'debugger_scm.c'
        add_project_arguments('-DHAVE_SCHEME', language : 'c')
    endif
    if readline.found()
        xsystem4_deps += readline
        add_project_arguments('-DHAVE_READLINE', language : 'c')
    endif
endif

executable('xsystem4', xsystem4,
           dependencies : xsystem4_deps,
           c_args : ['-Wno-unused-parameter'],
           include_directories : incdir,
           install : true)
