aincmp = ['../dasm.c',
          'aincmp.c',
]

executable('aincmp', aincmp,
           dependencies : tool_deps,
           include_directories : incdir,
           link_with : libsys4)

excmp = ['excmp.c']

executable('excmp', excmp,
           dependencies : tool_deps,
           include_directories : incdir,
           link_with : libsys4)
