aindump = ['../../cJSON.c',
           '../conv.c',
           'aindump.c',
           'dasm.c',
           'guess_filenames.c',
           'json.c',
           'macros.c',
]

executable('aindump', aindump,
           dependencies : tool_deps,
           include_directories : incdir,
           link_with : libsys4)
